--- a/AssemblyUnhollower/AssemblyUnhollower.csproj
+++ b/AssemblyUnhollower/AssemblyUnhollower.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
+        <OutputType>Library</OutputType>
         <TargetFrameworks>net4.7.2;net5.0;netstandard2.1</TargetFrameworks>
         <Nullable>enable</Nullable>
         <Version>0.4.13.0</Version>
