--- a/AssemblyUnhollower/AssemblyUnhollower.csproj
+++ b/AssemblyUnhollower/AssemblyUnhollower.csproj
@@ -7,6 +7,7 @@
         <Version>0.4.13.0</Version>
         <LangVersion>latest</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <DefineConstants>USE_CAPSTONE</DefineConstants>
     </PropertyGroup>
 
     <ItemGroup>
