--- a/UnhollowerBaseLib/UnhollowerBaseLib.csproj
+++ b/UnhollowerBaseLib/UnhollowerBaseLib.csproj
@@ -22,4 +22,8 @@
     <ItemGroup>
         <None Remove="Libs\Il2Cppmscorlib.dll" />
     </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Iced" Version="1.11.0" />
+    </ItemGroup>
 </Project>
