--- a/AssemblyUnhollower/AssemblyUnhollower.csproj
+++ b/AssemblyUnhollower/AssemblyUnhollower.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Library</OutputType>
-        <TargetFrameworks>net4.7.2;net5.0;netstandard2.1</TargetFrameworks>
+        <TargetFrameworks>net4.7.2;netstandard2.1</TargetFrameworks>
         <Nullable>enable</Nullable>
         <Version>0.4.15.1</Version>
         <LangVersion>latest</LangVersion>
